[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Liste.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Titre_font_70px.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Button_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/Text_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites/UI/floppy-disk.svg" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/trash.svg" type="Texture" id=7]
[ext_resource path="res://Scenes/Profils_list_display.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/UI/export.svg" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/import.svg" type="Texture" id=10]
[ext_resource path="res://Scripts/exp_and_imp.gd" type="Script" id=11]
[ext_resource path="res://Scripts/ImportDialog.gd" type="Script" id=12]
[ext_resource path="res://Scenes/ConfirmDialog.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/DisplayDialog.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/chargement.tscn" type="PackedScene" id=17]

[sub_resource type="Theme" id=1]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.109804, 0.105882, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MesListes" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "Mes Listes"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.008
margin_left = 24.0
margin_top = 72.0
margin_right = -24.0
margin_bottom = -136.192
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="Content"]
margin_right = 528.0
margin_bottom = 38.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Sélectionner la liste à afficher"

[node name="Faction" type="Label" parent="Content"]
visible = false
margin_top = 94.0
margin_right = 528.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 5 )
text = "Faction"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profils_list_display" parent="Content" instance=ExtResource( 8 )]
margin_top = 42.0
margin_bottom = 824.0

[node name="HBoxContainer" type="HBoxContainer" parent="Content"]
visible = false
margin_top = 784.0
margin_right = 528.0
margin_bottom = 824.0

[node name="ExportButton" type="Button" parent="Content/HBoxContainer"]
margin_right = 262.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Exporter"
icon = ExtResource( 9 )
flat = true
expand_icon = true

[node name="ColorRect" type="ColorRect" parent="Content/HBoxContainer/ExportButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.235294, 0.596078, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="Content/HBoxContainer"]
visible = false
margin_left = 177.0
margin_right = 350.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sauvegarder"
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="ColorRect" type="ColorRect" parent="Content/HBoxContainer/SaveButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="Content/HBoxContainer"]
margin_left = 266.0
margin_right = 528.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 3
action_mode = 0
text = "Supprimer"
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="ColorRect" type="ColorRect" parent="Content/HBoxContainer/DeleteButton"]
show_behind_parent = true
light_mask = -2147483647
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.847059, 0.054902, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportButton" type="Button" parent="."]
anchor_top = 1.008
anchor_right = 1.0
anchor_bottom = 1.008
margin_left = 24.0
margin_top = -127.192
margin_right = -24.0
margin_bottom = -89.192
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Importer"
icon = ExtResource( 10 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ImportButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
color = Color( 0.572549, 0.380392, 0.380392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmDialog" parent="." instance=ExtResource( 13 )]

[node name="DisplayDialog" parent="." instance=ExtResource( 14 )]
visible = true

[node name="ImportDialog" type="ConfirmationDialog" parent="."]
visible = true
margin_left = 256.0
margin_top = -448.0
margin_right = 576.0
margin_bottom = -160.0
popup_exclusive = true
window_title = "Import"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ImportDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ImportDialog/VBoxContainer"]
margin_right = 304.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Nom de la Liste"

[node name="ListName" type="LineEdit" parent="ImportDialog/VBoxContainer"]
margin_top = 36.0
margin_right = 304.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ImportDialog/VBoxContainer"]
margin_top = 124.0
margin_right = 304.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 4 )
text = "Code de la Liste"

[node name="Liste" type="LineEdit" parent="ImportDialog/VBoxContainer"]
margin_top = 160.0
margin_right = 304.0
margin_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportImport" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Menu_Commun" parent="." instance=ExtResource( 3 )]
margin_top = -72.0

[node name="Loading_animation" parent="." instance=ExtResource( 17 )]
visible = false
position = Vector2( 288, 512 )

[node name="ListeSelecteur" type="WindowDialog" parent="."]
visible = true
margin_left = -128.0
margin_top = -280.0
margin_right = 192.0
margin_bottom = -24.0
mouse_filter = 1
popup_exclusive = true
window_title = "Listes enregistrées"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="ListeSelecteur"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ListeSelecteur/ScrollContainer"]
margin_right = 304.0
rect_min_size = Vector2( 304, 0 )
[connection signal="pressed" from="Content/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="ImportButton" to="." method="_on_ImportButton_pressed"]
